cmake_minimum_required(VERSION 3.12)
project(gnu_coreutils_8_30 C)

set(CMAKE_C_STANDARD 11)

include_directories(gnulib-tests)
include_directories(gnulib-tests/glthread)
include_directories(gnulib-tests/unistr)
include_directories(lib)
include_directories(lib/glthread)
include_directories(lib/uniwidth)
include_directories(src)
include_directories(src/blake2)

add_executable(gnu_coreutils_8_30
        gnulib-tests/glthread/thread.c
        gnulib-tests/glthread/thread.h
        gnulib-tests/glthread/yield.h
        gnulib-tests/unistr/test-strncat.h
        gnulib-tests/unistr/test-u8-mbtoucr.c
        gnulib-tests/unistr/test-u8-uctomb.c
        gnulib-tests/uniwidth/test-uc_width.c
        gnulib-tests/uniwidth/test-uc_width2.c
        gnulib-tests/_Noreturn.h
        gnulib-tests/accept.c
        gnulib-tests/arg-nonnull.h
        gnulib-tests/bench-digest.h
        gnulib-tests/bench-md5.c
        gnulib-tests/bench-sha1.c
        gnulib-tests/bench-sha224.c
        gnulib-tests/bench-sha256.c
        gnulib-tests/bench-sha384.c
        gnulib-tests/bench-sha512.c
        gnulib-tests/bind.c
        gnulib-tests/c++defs.h
        gnulib-tests/connect.c
        gnulib-tests/getrusage.c
        gnulib-tests/inet_pton.c
        gnulib-tests/infinity.h
        gnulib-tests/ioctl.c
        gnulib-tests/listen.c
        gnulib-tests/localename.c
        gnulib-tests/localename.h
        gnulib-tests/macros.h
        gnulib-tests/minus-zero.h
        gnulib-tests/nan.h
        gnulib-tests/nap.h
        gnulib-tests/null-ptr.h
        gnulib-tests/perror.c
        gnulib-tests/pthread_sigmask.c
        gnulib-tests/randomd.c
        gnulib-tests/randoml.c
        gnulib-tests/setlocale.c
        gnulib-tests/setsockopt.c
        gnulib-tests/signature.h
        gnulib-tests/sleep.c
        gnulib-tests/socket.c
        gnulib-tests/strerror_r.c
        gnulib-tests/test-accept.c
        gnulib-tests/test-alignof.c
        gnulib-tests/test-alloca-opt.c
        gnulib-tests/test-areadlink-with-size.c
        gnulib-tests/test-areadlink.c
        gnulib-tests/test-areadlink.h
        gnulib-tests/test-areadlinkat.c
        gnulib-tests/test-argmatch.c
        gnulib-tests/test-argv-iter.c
        gnulib-tests/test-arpa_inet.c
        gnulib-tests/test-base32.c
        gnulib-tests/test-base64.c
        gnulib-tests/test-binary-io.c
        gnulib-tests/test-bind.c
        gnulib-tests/test-bitrotate.c
        gnulib-tests/test-btowc.c
        gnulib-tests/test-byteswap.c
        gnulib-tests/test-c-ctype.c
        gnulib-tests/test-c-strcasecmp.c
        gnulib-tests/test-c-strncasecmp.c
        gnulib-tests/test-calloc-gnu.c
        gnulib-tests/test-canonicalize.c
        gnulib-tests/test-chdir.c
        gnulib-tests/test-chown.c
        gnulib-tests/test-chown.h
        gnulib-tests/test-cloexec.c
        gnulib-tests/test-close.c
        gnulib-tests/test-closein.c
        gnulib-tests/test-connect.c
        gnulib-tests/test-copy-acl.c
        gnulib-tests/test-ctype.c
        gnulib-tests/test-di-set.c
        gnulib-tests/test-digest.h
        gnulib-tests/test-dirent-safer.c
        gnulib-tests/test-dirent.c
        gnulib-tests/test-dirname.c
        gnulib-tests/test-dup-safer.c
        gnulib-tests/test-dup.c
        gnulib-tests/test-dup2.c
        gnulib-tests/test-environ.c
        gnulib-tests/test-errno.c
        gnulib-tests/test-exclude.c
        gnulib-tests/test-faccessat.c
        gnulib-tests/test-fadvise.c
        gnulib-tests/test-fchdir.c
        gnulib-tests/test-fchmodat.c
        gnulib-tests/test-fchownat.c
        gnulib-tests/test-fclose.c
        gnulib-tests/test-fcntl-h.c
        gnulib-tests/test-fcntl-safer.c
        gnulib-tests/test-fcntl.c
        gnulib-tests/test-fdatasync.c
        gnulib-tests/test-fdopen.c
        gnulib-tests/test-fdopendir.c
        gnulib-tests/test-fdutimensat.c
        gnulib-tests/test-fflush.c
        gnulib-tests/test-fflush2.c
        gnulib-tests/test-fgetc.c
        gnulib-tests/test-file-has-acl.c
        gnulib-tests/test-filenamecat.c
        gnulib-tests/test-filevercmp.c
        gnulib-tests/test-float.c
        gnulib-tests/test-fnmatch.c
        gnulib-tests/test-fopen-safer.c
        gnulib-tests/test-fopen.c
        gnulib-tests/test-fopen.h
        gnulib-tests/test-fpending.c
        gnulib-tests/test-fprintf-posix.h
        gnulib-tests/test-fpurge.c
        gnulib-tests/test-fputc.c
        gnulib-tests/test-fread.c
        gnulib-tests/test-freadahead.c
        gnulib-tests/test-freading.c
        gnulib-tests/test-freadptr.c
        gnulib-tests/test-freadptr2.c
        gnulib-tests/test-freadseek.c
        gnulib-tests/test-freopen-safer.c
        gnulib-tests/test-freopen.c
        gnulib-tests/test-frexp.c
        gnulib-tests/test-frexp.h
        gnulib-tests/test-frexpl.c
        gnulib-tests/test-fseek.c
        gnulib-tests/test-fseeko.c
        gnulib-tests/test-fseeko3.c
        gnulib-tests/test-fseeko4.c
        gnulib-tests/test-fseterr.c
        gnulib-tests/test-fstat.c
        gnulib-tests/test-fstatat.c
        gnulib-tests/test-fsync.c
        gnulib-tests/test-ftell.c
        gnulib-tests/test-ftell3.c
        gnulib-tests/test-ftello.c
        gnulib-tests/test-ftello3.c
        gnulib-tests/test-ftello4.c
        gnulib-tests/test-ftruncate.c
        gnulib-tests/test-futimens.c
        gnulib-tests/test-futimens.h
        gnulib-tests/test-fwrite.c
        gnulib-tests/test-getaddrinfo.c
        gnulib-tests/test-getcwd-lgpl.c
        gnulib-tests/test-getcwd.c
        gnulib-tests/test-getdelim.c
        gnulib-tests/test-getdtablesize.c
        gnulib-tests/test-getgroups.c
        gnulib-tests/test-gethostname.c
        gnulib-tests/test-getline.c
        gnulib-tests/test-getloadavg.c
        gnulib-tests/test-getlogin.c
        gnulib-tests/test-getlogin.h
        gnulib-tests/test-getndelim2.c
        gnulib-tests/test-getopt-gnu.c
        gnulib-tests/test-getopt-main.h
        gnulib-tests/test-getopt-posix.c
        gnulib-tests/test-getopt.h
        gnulib-tests/test-getopt_long.h
        gnulib-tests/test-getprogname.c
        gnulib-tests/test-getrusage.c
        gnulib-tests/test-gettimeofday.c
        gnulib-tests/test-hash.c
        gnulib-tests/test-i-ring.c
        gnulib-tests/test-iconv-h.c
        gnulib-tests/test-iconv.c
        gnulib-tests/test-ignore-value.c
        gnulib-tests/test-inet_ntop.c
        gnulib-tests/test-inet_pton.c
        gnulib-tests/test-ino-map.c
        gnulib-tests/test-intprops.c
        gnulib-tests/test-inttostr.c
        gnulib-tests/test-inttypes.c
        gnulib-tests/test-ioctl.c
        gnulib-tests/test-isatty.c
        gnulib-tests/test-isblank.c
        gnulib-tests/test-isnand-nolibm.c
        gnulib-tests/test-isnand.h
        gnulib-tests/test-isnanf-nolibm.c
        gnulib-tests/test-isnanf.h
        gnulib-tests/test-isnanl-nolibm.c
        gnulib-tests/test-isnanl.h
        gnulib-tests/test-iswblank.c
        gnulib-tests/test-langinfo.c
        gnulib-tests/test-lchown.c
        gnulib-tests/test-lchown.h
        gnulib-tests/test-limits-h.c
        gnulib-tests/test-link.c
        gnulib-tests/test-link.h
        gnulib-tests/test-linkat.c
        gnulib-tests/test-listen.c
        gnulib-tests/test-localcharset.c
        gnulib-tests/test-locale.c
        gnulib-tests/test-localeconv.c
        gnulib-tests/test-localename.c
        gnulib-tests/test-lock.c
        gnulib-tests/test-lseek.c
        gnulib-tests/test-lstat.c
        gnulib-tests/test-lstat.h
        gnulib-tests/test-lutimens.h
        gnulib-tests/test-malloc-gnu.c
        gnulib-tests/test-malloca.c
        gnulib-tests/test-math.c
        gnulib-tests/test-mbrtowc-w32.c
        gnulib-tests/test-mbrtowc.c
        gnulib-tests/test-mbsalign.c
        gnulib-tests/test-mbscasecmp.c
        gnulib-tests/test-mbschr.c
        gnulib-tests/test-mbsinit.c
        gnulib-tests/test-mbsrtowcs.c
        gnulib-tests/test-mbsstr1.c
        gnulib-tests/test-mbsstr2.c
        gnulib-tests/test-mbsstr3.c
        gnulib-tests/test-md5.c
        gnulib-tests/test-memcasecmp.c
        gnulib-tests/test-memchr.c
        gnulib-tests/test-memchr2.c
        gnulib-tests/test-memcoll.c
        gnulib-tests/test-memrchr.c
        gnulib-tests/test-mkdir.c
        gnulib-tests/test-mkdir.h
        gnulib-tests/test-mkfifo.c
        gnulib-tests/test-mkfifo.h
        gnulib-tests/test-mknod.c
        gnulib-tests/test-nanosleep.c
        gnulib-tests/test-netdb.c
        gnulib-tests/test-netinet_in.c
        gnulib-tests/test-nl_langinfo.c
        gnulib-tests/test-nstrftime.c
        gnulib-tests/test-once.c
        gnulib-tests/test-open.c
        gnulib-tests/test-open.h
        gnulib-tests/test-openat-safer.c
        gnulib-tests/test-openat.c
        gnulib-tests/test-parse-datetime.c
        gnulib-tests/test-pathmax.c
        gnulib-tests/test-perror.c
        gnulib-tests/test-perror2.c
        gnulib-tests/test-pipe.c
        gnulib-tests/test-pipe2.c
        gnulib-tests/test-posixtm.c
        gnulib-tests/test-printf-frexp.c
        gnulib-tests/test-printf-frexpl.c
        gnulib-tests/test-printf-posix.h
        gnulib-tests/test-priv-set.c
        gnulib-tests/test-pthread_sigmask1.c
        gnulib-tests/test-pthread_sigmask2.c
        gnulib-tests/test-quotearg-simple.c
        gnulib-tests/test-quotearg.h
        gnulib-tests/test-raise.c
        gnulib-tests/test-rand-isaac.c
        gnulib-tests/test-read-file.c
        gnulib-tests/test-read.c
        gnulib-tests/test-readlink.c
        gnulib-tests/test-readlink.h
        gnulib-tests/test-readlinkat.c
        gnulib-tests/test-readtokens.c
        gnulib-tests/test-realloc-gnu.c
        gnulib-tests/test-regex.c
        gnulib-tests/test-remove.c
        gnulib-tests/test-rename.c
        gnulib-tests/test-rename.h
        gnulib-tests/test-renameat.c
        gnulib-tests/test-renameat2.c
        gnulib-tests/test-rmdir.c
        gnulib-tests/test-rmdir.h
        gnulib-tests/test-rwlock1.c
        gnulib-tests/test-sameacls.c
        gnulib-tests/test-sched.c
        gnulib-tests/test-select-fd.c
        gnulib-tests/test-select-stdin.c
        gnulib-tests/test-select.c
        gnulib-tests/test-select.h
        gnulib-tests/test-set-mode-acl.c
        gnulib-tests/test-setenv.c
        gnulib-tests/test-setlocale1.c
        gnulib-tests/test-setlocale2.c
        gnulib-tests/test-setsockopt.c
        gnulib-tests/test-sha1.c
        gnulib-tests/test-sha256.c
        gnulib-tests/test-sha512.c
        gnulib-tests/test-sigaction.c
        gnulib-tests/test-signal-h.c
        gnulib-tests/test-signbit.c
        gnulib-tests/test-sigprocmask.c
        gnulib-tests/test-sleep.c
        gnulib-tests/test-snprintf.c
        gnulib-tests/test-sockets.c
        gnulib-tests/test-stat-time.c
        gnulib-tests/test-stat.c
        gnulib-tests/test-stat.h
        gnulib-tests/test-statat.c
        gnulib-tests/test-stdalign.c
        gnulib-tests/test-stdbool.c
        gnulib-tests/test-stddef.c
        gnulib-tests/test-stdint.c
        gnulib-tests/test-stdio.c
        gnulib-tests/test-stdlib.c
        gnulib-tests/test-strerror.c
        gnulib-tests/test-strerror_r.c
        gnulib-tests/test-striconv.c
        gnulib-tests/test-string.c
        gnulib-tests/test-strncat.c
        gnulib-tests/test-strnlen.c
        gnulib-tests/test-strsignal.c
        gnulib-tests/test-strtod.c
        gnulib-tests/test-strtoimax.c
        gnulib-tests/test-strtoll.c
        gnulib-tests/test-strtoull.c
        gnulib-tests/test-strtoumax.c
        gnulib-tests/test-symlink.c
        gnulib-tests/test-symlink.h
        gnulib-tests/test-symlinkat.c
        gnulib-tests/test-sys_ioctl.c
        gnulib-tests/test-sys_resource.c
        gnulib-tests/test-sys_select.c
        gnulib-tests/test-sys_socket.c
        gnulib-tests/test-sys_stat.c
        gnulib-tests/test-sys_time.c
        gnulib-tests/test-sys_types.c
        gnulib-tests/test-sys_uio.c
        gnulib-tests/test-sys_utsname.c
        gnulib-tests/test-sys_wait.c
        gnulib-tests/test-sys_wait.h
        gnulib-tests/test-termios.c
        gnulib-tests/test-thread_create.c
        gnulib-tests/test-thread_self.c
        gnulib-tests/test-time.c
        gnulib-tests/test-timespec.c
        gnulib-tests/test-tls.c
        gnulib-tests/test-u64.c
        gnulib-tests/test-uname.c
        gnulib-tests/test-unistd.c
        gnulib-tests/test-unlink.c
        gnulib-tests/test-unlink.h
        gnulib-tests/test-unlinkat.c
        gnulib-tests/test-unsetenv.c
        gnulib-tests/test-userspec.c
        gnulib-tests/test-usleep.c
        gnulib-tests/test-utime-h.c
        gnulib-tests/test-utime.c
        gnulib-tests/test-utimens-common.h
        gnulib-tests/test-utimens.c
        gnulib-tests/test-utimens.h
        gnulib-tests/test-utimensat.c
        gnulib-tests/test-vasnprintf.c
        gnulib-tests/test-vasprintf-posix.c
        gnulib-tests/test-vasprintf.c
        gnulib-tests/test-verify-try.c
        gnulib-tests/test-verify.c
        gnulib-tests/test-version-etc.c
        gnulib-tests/test-vfprintf-posix.c
        gnulib-tests/test-vprintf-posix.c
        gnulib-tests/test-wchar.c
        gnulib-tests/test-wcrtomb-w32.c
        gnulib-tests/test-wcrtomb.c
        gnulib-tests/test-wctype-h.c
        gnulib-tests/test-wcwidth.c
        gnulib-tests/test-write.c
        gnulib-tests/test-xalloc-die.c
        gnulib-tests/test-xfprintf-posix.c
        gnulib-tests/test-xprintf-posix.c
        gnulib-tests/test-xstrtoimax.c
        gnulib-tests/test-xstrtol.c
        gnulib-tests/test-xstrtoul.c
        gnulib-tests/test-xstrtoumax.c
        gnulib-tests/test-xvasprintf.c
        gnulib-tests/test-yesno.c
        gnulib-tests/timespec-add.c
        gnulib-tests/timespec-sub.c
        gnulib-tests/unlinkdir.c
        gnulib-tests/unlinkdir.h
        gnulib-tests/unused-parameter.h
        gnulib-tests/usleep.c
        gnulib-tests/w32sock.h
        gnulib-tests/warn-on-use.h
        gnulib-tests/wctob.c
        gnulib-tests/wctomb-impl.h
        gnulib-tests/wctomb.c
        gnulib-tests/zerosize-ptr.h
        lib/glthread/lock.c
        lib/glthread/lock.h
        lib/glthread/threadlib.c
        lib/glthread/tls.c
        lib/glthread/tls.h
        lib/unistr/u8-mbtoucr.c
        lib/unistr/u8-uctomb-aux.c
        lib/unistr/u8-uctomb.c
        lib/uniwidth/cjk.h
        lib/uniwidth/width.c
        lib/_Noreturn.h
        lib/acl-errno-valid.c
        lib/acl-internal.c
        lib/acl-internal.h
        lib/acl.h
        lib/acl_entries.c
        lib/af_alg.c
        lib/af_alg.h
        lib/alignof.h
        lib/alloca.c
        lib/alloca.in.h
        lib/allocator.c
        lib/allocator.h
        lib/anytostr.c
        lib/areadlink-with-size.c
        lib/areadlink.c
        lib/areadlink.h
        lib/areadlinkat.c
        lib/arg-nonnull.h
        lib/argmatch.c
        lib/argmatch.h
        lib/argv-iter.c
        lib/argv-iter.h
        lib/arpa_inet.in.h
        lib/asnprintf.c
        lib/asprintf.c
        lib/assure.h
        lib/at-func.c
        lib/at-func2.c
        lib/backup-find.c
        lib/backup-internal.h
        lib/backup-rename.c
        lib/backupfile.c
        lib/backupfile.h
        lib/base32.c
        lib/base32.h
        lib/base64.c
        lib/base64.h
        lib/basename-lgpl.c
        lib/basename.c
        lib/binary-io.c
        lib/binary-io.h
        lib/bitrotate.c
        lib/bitrotate.h
        lib/btowc.c
        lib/buffer-lcm.c
        lib/buffer-lcm.h
        lib/byteswap.in.h
        lib/c++defs.h
        lib/c-ctype.c
        lib/c-ctype.h
        lib/c-strcase.h
        lib/c-strcasecmp.c
        lib/c-strcaseeq.h
        lib/c-strncasecmp.c
        lib/c-strtod.c
        lib/c-strtod.h
        lib/c-strtold.c
        lib/calloc.c
        lib/canon-host.c
        lib/canon-host.h
        lib/canonicalize.c
        lib/canonicalize.h
        lib/careadlinkat.c
        lib/careadlinkat.h
        lib/chdir-long.c
        lib/chdir-long.h
        lib/chmodat.c
        lib/chown.c
        lib/chownat.c
        lib/cloexec.c
        lib/cloexec.h
        lib/close-stream.c
        lib/close-stream.h
        lib/close.c
        lib/closedir.c
        lib/closein.c
        lib/closein.h
        lib/closeout.c
        lib/closeout.h
        lib/copy-acl.c
        lib/creat-safer.c
        lib/ctype.in.h
        lib/cycle-check.c
        lib/cycle-check.h
        lib/dev-ino.h
        lib/di-set.c
        lib/di-set.h
        lib/diacrit.c
        lib/diacrit.h
        lib/dirchownmod.c
        lib/dirchownmod.h
        lib/dirent--.h
        lib/dirent-private.h
        lib/dirent-safer.h
        lib/dirent.in.h
        lib/dirfd.c
        lib/dirname-lgpl.c
        lib/dirname.c
        lib/dirname.h
        lib/dosname.h
        lib/dtoastr.c
        lib/dtotimespec.c
        lib/dup-safer-flag.c
        lib/dup-safer.c
        lib/dup.c
        lib/dup2.c
        lib/errno.in.h
        lib/error.c
        lib/error.h
        lib/euidaccess.c
        lib/exclude.c
        lib/exclude.h
        lib/exitfail.c
        lib/exitfail.h
        lib/explicit_bzero.c
        lib/faccessat.c
        lib/fadvise.c
        lib/fadvise.h
        lib/fchdir.c
        lib/fchmodat.c
        lib/fchown-stub.c
        lib/fchownat.c
        lib/fclose.c
        lib/fcntl--.h
        lib/fcntl-safer.h
        lib/fcntl.c
        lib/fcntl.in.h
        lib/fd-hook.c
        lib/fd-hook.h
        lib/fd-reopen.c
        lib/fd-reopen.h
        lib/fd-safer-flag.c
        lib/fd-safer.c
        lib/fdatasync.c
        lib/fdopen.c
        lib/fdopendir.c
        lib/fdutimensat.c
        lib/fflush.c
        lib/file-has-acl.c
        lib/file-set.c
        lib/file-set.h
        lib/file-type.c
        lib/file-type.h
        lib/fileblocks.c
        lib/filemode.c
        lib/filemode.h
        lib/filename.h
        lib/filenamecat-lgpl.c
        lib/filenamecat.c
        lib/filenamecat.h
        lib/filevercmp.c
        lib/filevercmp.h
        lib/flexmember.h
        lib/float+.h
        lib/float.c
        lib/float.in.h
        lib/fnmatch.c
        lib/fnmatch.in.h
        lib/fnmatch_loop.c
        lib/fopen-safer.c
        lib/fopen.c
        lib/fpending.c
        lib/fpending.h
        lib/fprintftime.c
        lib/fprintftime.h
        lib/fpucw.h
        lib/fpurge.c
        lib/freadahead.c
        lib/freadahead.h
        lib/freading.c
        lib/freading.h
        lib/freadptr.c
        lib/freadptr.h
        lib/freadseek.c
        lib/freadseek.h
        lib/freopen-safer.c
        lib/freopen.c
        lib/frexp.c
        lib/frexpl.c
        lib/fseek.c
        lib/fseeko.c
        lib/fseterr.c
        lib/fseterr.h
        lib/fstat.c
        lib/fstatat.c
        lib/fsusage.c
        lib/fsusage.h
        lib/fsync.c
        lib/ftell.c
        lib/ftello.c
        lib/ftoastr.c
        lib/ftoastr.h
        lib/ftruncate.c
        lib/fts-cycle.c
        lib/fts.c
        lib/fts_.h
        lib/full-read.c
        lib/full-read.h
        lib/full-write.c
        lib/full-write.h
        lib/futimens.c
        lib/gai_strerror.c
        lib/get-permissions.c
        lib/getaddrinfo.c
        lib/getcwd-lgpl.c
        lib/getcwd.c
        lib/getdelim.c
        lib/getdtablesize.c
        lib/getfilecon.c
        lib/getgroups.c
        lib/gethostname.c
        lib/gethrxtime.c
        lib/gethrxtime.h
        lib/getline.c
        lib/getloadavg.c
        lib/getlogin.c
        lib/getndelim2.c
        lib/getndelim2.h
        lib/getopt-cdefs.in.h
        lib/getopt-core.h
        lib/getopt-ext.h
        lib/getopt-pfx-core.h
        lib/getopt-pfx-ext.h
        lib/getopt.c
        lib/getopt.in.h
        lib/getopt1.c
        lib/getopt_int.h
        lib/getpagesize.c
        lib/getpass.c
        lib/getpass.h
        lib/getprogname.c
        lib/getprogname.h
        lib/gettext.h
        lib/gettime.c
        lib/gettimeofday.c
        lib/getugroups.c
        lib/getugroups.h
        lib/getusershell.c
        lib/gl_openssl.h
        lib/group-member.c
        lib/hard-locale.c
        lib/hard-locale.h
        lib/hash-pjw.c
        lib/hash-pjw.h
        lib/hash-triple.c
        lib/hash-triple.h
        lib/hash.c
        lib/hash.h
        lib/heap.c
        lib/heap.h
        lib/human.c
        lib/human.h
        lib/i-ring.c
        lib/i-ring.h
        lib/iconv.c
        lib/iconv.in.h
        lib/iconv_close.c
        lib/iconv_open-aix.h
        lib/iconv_open-hpux.h
        lib/iconv_open-irix.h
        lib/iconv_open-osf.h
        lib/iconv_open-solaris.h
        lib/iconv_open.c
        lib/idcache.c
        lib/idcache.h
        lib/ignore-value.h
        lib/imaxtostr.c
        lib/inet_ntop.c
        lib/ino-map.c
        lib/ino-map.h
        lib/intprops.h
        lib/inttostr.c
        lib/inttostr.h
        lib/inttypes.in.h
        lib/isapipe.c
        lib/isapipe.h
        lib/isatty.c
        lib/isblank.c
        lib/isnan.c
        lib/isnand-nolibm.h
        lib/isnand.c
        lib/isnanf-nolibm.h
        lib/isnanf.c
        lib/isnanl-nolibm.h
        lib/isnanl.c
        lib/iswblank.c
        lib/itold.c
        lib/langinfo.in.h
        lib/lchown.c
        lib/ldtoastr.c
        lib/limits.in.h
        lib/linebuffer.c
        lib/linebuffer.h
        lib/link.c
        lib/linkat.c
        lib/localcharset.c
        lib/localcharset.h
        lib/locale.in.h
        lib/localeconv.c
        lib/localtime-buffer.c
        lib/localtime-buffer.h
        lib/long-options.c
        lib/long-options.h
        lib/lseek.c
        lib/lstat.c
        lib/malloc.c
        lib/malloca.c
        lib/malloca.h
        lib/math.c
        lib/math.in.h
        lib/mbchar.c
        lib/mbchar.h
        lib/mbiter.c
        lib/mbiter.h
        lib/mbrlen.c
        lib/mbrtowc.c
        lib/mbsalign.c
        lib/mbsalign.h
        lib/mbscasecmp.c
        lib/mbschr.c
        lib/mbsinit.c
        lib/mbslen.c
        lib/mbsrtowcs-impl.h
        lib/mbsrtowcs-state.c
        lib/mbsrtowcs.c
        lib/mbsstr.c
        lib/mbswidth.c
        lib/mbswidth.h
        lib/mbtowc-impl.h
        lib/mbtowc.c
        lib/mbuiter.c
        lib/mbuiter.h
        lib/md5.c
        lib/md5.h
        lib/memcasecmp.c
        lib/memcasecmp.h
        lib/memchr.c
        lib/memchr2.c
        lib/memchr2.h
        lib/memcmp2.c
        lib/memcmp2.h
        lib/memcoll.c
        lib/memcoll.h
        lib/mempcpy.c
        lib/memrchr.c
        lib/mgetgroups.c
        lib/mgetgroups.h
        lib/minmax.h
        lib/mkancesdirs.c
        lib/mkancesdirs.h
        lib/mkdir-p.c
        lib/mkdir-p.h
        lib/mkdir.c
        lib/mkfifo.c
        lib/mknod.c
        lib/mkostemp.c
        lib/mkstemp-safer.c
        lib/mkstemp.c
        lib/mktime-internal.h
        lib/mktime.c
        lib/modechange.c
        lib/modechange.h
        lib/mountlist.c
        lib/mountlist.h
        lib/mpsort.c
        lib/mpsort.h
        lib/msvc-inval.c
        lib/msvc-inval.h
        lib/msvc-nothrow.c
        lib/msvc-nothrow.h
        lib/nanosleep.c
        lib/netdb.in.h
        lib/netinet_in.in.h
        lib/nl_langinfo.c
        lib/nproc.c
        lib/nproc.h
        lib/nstrftime.c
        lib/obstack.c
        lib/obstack.h
        lib/offtostr.c
        lib/open-safer.c
        lib/open.c
        lib/openat-die.c
        lib/openat-priv.h
        lib/openat-proc.c
        lib/openat-safer.c
        lib/openat.c
        lib/openat.h
        lib/opendir-safer.c
        lib/opendir.c
        lib/parse-datetime.c
        lib/parse-datetime.h
        lib/pathmax.h
        lib/physmem.c
        lib/physmem.h
        lib/pipe-safer.c
        lib/pipe.c
        lib/pipe2.c
        lib/posixtm.c
        lib/posixtm.h
        lib/posixver.c
        lib/posixver.h
        lib/printf-args.c
        lib/printf-args.h
        lib/printf-frexp.c
        lib/printf-frexp.h
        lib/printf-frexpl.c
        lib/printf-frexpl.h
        lib/printf-parse.c
        lib/printf-parse.h
        lib/priv-set.c
        lib/priv-set.h
        lib/progname.c
        lib/progname.h
        lib/propername.c
        lib/propername.h
        lib/pthread.c
        lib/pthread.in.h
        lib/putenv.c
        lib/qcopy-acl.c
        lib/qset-acl.c
        lib/quote.h
        lib/quotearg.c
        lib/quotearg.h
        lib/raise.c
        lib/rand-isaac.c
        lib/rand-isaac.h
        lib/randint.c
        lib/randint.h
        lib/randperm.c
        lib/randperm.h
        lib/randread.c
        lib/randread.h
        lib/read-file.c
        lib/read-file.h
        lib/read.c
        lib/readdir.c
        lib/readlink.c
        lib/readlinkat.c
        lib/readtokens.c
        lib/readtokens.h
        lib/readtokens0.c
        lib/readtokens0.h
        lib/readutmp.c
        lib/readutmp.h
        lib/realloc.c
        lib/regcomp.c
        lib/regex.c
        lib/regex.h
        lib/regex_internal.c
        lib/regex_internal.h
        lib/regexec.c
        lib/remove.c
        lib/rename.c
        lib/renameat.c
        lib/renameat2.c
        lib/renameat2.h
        lib/rewinddir.c
        lib/rmdir.c
        lib/root-dev-ino.c
        lib/root-dev-ino.h
        lib/root-uid.h
        lib/rpmatch.c
        lib/safe-read.c
        lib/safe-read.h
        lib/safe-write.c
        lib/safe-write.h
        lib/same-inode.h
        lib/same.c
        lib/same.h
        lib/save-cwd.c
        lib/save-cwd.h
        lib/savedir.c
        lib/savedir.h
        lib/savewd.c
        lib/savewd.h
        lib/sched.in.h
        lib/se-context.c
        lib/se-context.in.h
        lib/se-selinux.c
        lib/se-selinux.in.h
        lib/select.c
        lib/selinux-at.c
        lib/selinux-at.h
        lib/set-acl.c
        lib/set-permissions.c
        lib/setenv.c
        lib/settime.c
        lib/sha1.c
        lib/sha1.h
        lib/sha256.c
        lib/sha256.h
        lib/sha512.c
        lib/sha512.h
        lib/sig-handler.c
        lib/sig-handler.h
        lib/sig2str.c
        lib/sig2str.h
        lib/sigaction.c
        lib/siglist.h
        lib/signal.in.h
        lib/signbitd.c
        lib/signbitf.c
        lib/signbitl.c
        lib/sigprocmask.c
        lib/size_max.h
        lib/smack.h
        lib/snprintf.c
        lib/sockets.c
        lib/sockets.h
        lib/stat-macros.h
        lib/stat-size.h
        lib/stat-time.c
        lib/stat-time.h
        lib/stat-w32.c
        lib/stat-w32.h
        lib/stat.c
        lib/statat.c
        lib/stdalign.in.h
        lib/stdarg.in.h
        lib/stdbool.in.h
        lib/stddef.in.h
        lib/stdint.in.h
        lib/stdio--.h
        lib/stdio-impl.h
        lib/stdio-safer.h
        lib/stdio.in.h
        lib/stdlib--.h
        lib/stdlib-safer.h
        lib/stdlib.in.h
        lib/stpcpy.c
        lib/stpncpy.c
        lib/str-kmp.h
        lib/str-two-way.h
        lib/strdup.c
        lib/streq.h
        lib/strerror-override.c
        lib/strerror-override.h
        lib/strerror.c
        lib/strftime.h
        lib/striconv.c
        lib/striconv.h
        lib/string.in.h
        lib/strintcmp.c
        lib/stripslash.c
        lib/strncat.c
        lib/strndup.c
        lib/strnlen.c
        lib/strnlen1.c
        lib/strnlen1.h
        lib/strnumcmp-in.h
        lib/strnumcmp.c
        lib/strnumcmp.h
        lib/strsignal.c
        lib/strstr.c
        lib/strtod.c
        lib/strtoimax.c
        lib/strtol.c
        lib/strtoll.c
        lib/strtoul.c
        lib/strtoull.c
        lib/strtoumax.c
        lib/symlink.c
        lib/symlinkat.c
        lib/sys-limits.h
        lib/sys_ioctl.in.h
        lib/sys_resource.in.h
        lib/sys_select.in.h
        lib/sys_socket.c
        lib/sys_socket.in.h
        lib/sys_stat.in.h
        lib/sys_time.in.h
        lib/sys_types.in.h
        lib/sys_uio.in.h
        lib/sys_utsname.in.h
        lib/sys_wait.in.h
        lib/tempname.c
        lib/tempname.h
        lib/termios.in.h
        lib/time-internal.h
        lib/time.in.h
        lib/time_r.c
        lib/time_rz.c
        lib/timegm.c
        lib/timespec.c
        lib/timespec.h
        lib/trim.c
        lib/trim.h
        lib/tzset.c
        lib/u64.c
        lib/u64.h
        lib/uinttostr.c
        lib/umaxtostr.c
        lib/uname.c
        lib/unicodeio.c
        lib/unicodeio.h
        lib/unistd--.h
        lib/unistd-safer.h
        lib/unistd.c
        lib/unistd.in.h
        lib/unistr.in.h
        lib/unitypes.in.h
        lib/uniwidth.in.h
        lib/unlink.c
        lib/unlinkat.c
        lib/unlocked-io.h
        lib/unsetenv.c
        lib/unused-parameter.h
        lib/userspec.c
        lib/userspec.h
        lib/utime.c
        lib/utime.in.h
        lib/utimecmp.c
        lib/utimecmp.h
        lib/utimens.c
        lib/utimens.h
        lib/utimensat.c
        lib/vasnprintf.c
        lib/vasnprintf.h
        lib/vasprintf.c
        lib/verify.h
        lib/verror.c
        lib/verror.h
        lib/version-etc-fsf.c
        lib/version-etc.c
        lib/version-etc.h
        lib/vfprintf.c
        lib/vprintf.c
        lib/w32sock.h
        lib/warn-on-use.h
        lib/wchar.in.h
        lib/wcrtomb.c
        lib/wcswidth-impl.h
        lib/wcswidth.c
        lib/wctype-h.c
        lib/wctype.in.h
        lib/wcwidth.c
        lib/write-any-file.c
        lib/write-any-file.h
        lib/write.c
        lib/xalloc-die.c
        lib/xalloc-oversized.h
        lib/xalloc.h
        lib/xasprintf.c
        lib/xbinary-io.c
        lib/xbinary-io.h
        lib/xdectoimax.c
        lib/xdectoint.c
        lib/xdectoint.h
        lib/xdectoumax.c
        lib/xfts.c
        lib/xfts.h
        lib/xgetcwd.c
        lib/xgetcwd.h
        lib/xgetgroups.c
        lib/xgethostname.c
        lib/xgethostname.h
        lib/xmalloc.c
        lib/xmemcoll.c
        lib/xmemcoll.h
        lib/xnanosleep.c
        lib/xnanosleep.h
        lib/xprintf.c
        lib/xprintf.h
        lib/xreadlink.c
        lib/xreadlink.h
        lib/xsize.c
        lib/xsize.h
        lib/xstriconv.c
        lib/xstriconv.h
        lib/xstrndup.c
        lib/xstrndup.h
        lib/xstrtod.c
        lib/xstrtod.h
        lib/xstrtoimax.c
        lib/xstrtol-error.c
        lib/xstrtol.c
        lib/xstrtol.h
        lib/xstrtold.c
        lib/xstrtoul.c
        lib/xstrtoumax.c
        lib/xtime.c
        lib/xtime.h
        lib/xvasprintf.c
        lib/xvasprintf.h
        lib/yesno.c
        lib/yesno.h
        src/blake2/b2sum.c
        src/blake2/b2sum.h
        src/blake2/blake2-impl.h
        src/blake2/blake2.h
        src/blake2/blake2b-ref.c
        src/base64.c
        src/basename.c
        src/cat.c
        src/chcon.c
        src/chgrp.c
        src/chmod.c
        src/chown-core.c
        src/chown-core.h
        src/chown.c
        src/chroot.c
        src/cksum.c
        src/comm.c
        src/copy.c
        src/copy.h
        src/coreutils-arch.c
        src/coreutils-dir.c
        src/coreutils-vdir.c
        src/coreutils.c
        src/cp-hash.c
        src/cp-hash.h
        src/cp.c
        src/csplit.c
        src/cut.c
        src/date.c
        src/dd.c
        src/df.c
        src/die.h
        src/dircolors.c
        src/dircolors.h
        src/dirname.c
        src/du.c
        src/echo.c
        src/env.c
        src/expand-common.c
        src/expand-common.h
        src/expand.c
        src/expr.c
        src/extent-scan.c
        src/extent-scan.h
        src/factor.c
        src/false.c
        src/fiemap.h
        src/find-mount-point.c
        src/find-mount-point.h
        src/fmt.c
        src/fold.c
        src/force-link.c
        src/force-link.h
        src/fs-is-local.h
        src/fs.h
        src/getlimits.c
        src/group-list.c
        src/group-list.h
        src/groups.c
        src/head.c
        src/hostid.c
        src/hostname.c
        src/id.c
        src/install.c
        src/ioblksize.h
        src/join.c
        src/kill.c
        src/lbracket.c
        src/libstdbuf.c
        src/link.c
        src/ln.c
        src/logname.c
        src/longlong.h
        src/ls-dir.c
        src/ls-ls.c
        src/ls-vdir.c
        src/ls.c
        src/ls.h
        src/make-prime-list.c
        src/md5sum.c
        src/mkdir.c
        src/mkfifo.c
        src/mknod.c
        src/mktemp.c
        src/mv.c
        src/nice.c
        src/nl.c
        src/nohup.c
        src/nproc.c
        src/numfmt.c
        src/od.c
        src/operand2sig.c
        src/operand2sig.h
        src/paste.c
        src/pathchk.c
        src/pinky.c
        src/pr.c
        src/primes.h
        src/printenv.c
        src/printf.c
        src/prog-fprintf.c
        src/prog-fprintf.h
        src/ptx.c
        src/pwd.c
        src/readlink.c
        src/realpath.c
        src/relpath.c
        src/relpath.h
        src/remove.c
        src/remove.h
        src/rm.c
        src/rmdir.c
        src/runcon.c
        src/selinux.c
        src/selinux.h
        src/seq.c
        src/set-fields.c
        src/set-fields.h
        src/shred.c
        src/shuf.c
        src/sleep.c
        src/sort.c
        src/split.c
        src/stat.c
        src/stdbuf.c
        src/stty.c
        src/sum.c
        src/sync.c
        src/system.h
        src/tac-pipe.c
        src/tac.c
        src/tail.c
        src/tee.c
        src/test.c
        src/timeout.c
        src/touch.c
        src/tr.c
        src/true.c
        src/truncate.c
        src/tsort.c
        src/tty.c
        src/uname-arch.c
        src/uname-uname.c
        src/uname.c
        src/uname.h
        src/unexpand.c
        src/uniq.c
        src/unlink.c
        src/uptime.c
        src/users.c
        src/wc.c
        src/who.c
        src/whoami.c
        src/yes.c)
