cmake_minimum_required(VERSION 3.12)
project(wget_1_19_5 C)

set(CMAKE_C_STANDARD 11)

include_directories(fuzz)
include_directories(lib)
include_directories(lib/glthread)
include_directories(lib/unicase)
include_directories(lib/unictype)
include_directories(lib/uninorm)
include_directories(lib/unistr)
include_directories(lib/uniwidth)
include_directories(msdos)
include_directories(src)
include_directories(tests)

add_executable(wget_1_19_5
        fuzz/fuzzer.h
        fuzz/main.c
        fuzz/wget_cookie_fuzzer.c
        fuzz/wget_css_fuzzer.c
        fuzz/wget_ftpls_fuzzer.c
        fuzz/wget_html_fuzzer.c
        fuzz/wget_netrc_fuzzer.c
        fuzz/wget_options_fuzzer.c
        fuzz/wget_robots_fuzzer.c
        fuzz/wget_url_fuzzer.c
        lib/glthread/lock.c
        lib/glthread/lock.h
        lib/glthread/threadlib.c
        lib/unicase/cased.c
        lib/unicase/cased.h
        lib/unicase/caseprop.h
        lib/unicase/context.h
        lib/unicase/empty-prefix-context.c
        lib/unicase/empty-suffix-context.c
        lib/unicase/ignorable.c
        lib/unicase/ignorable.h
        lib/unicase/simple-mapping.h
        lib/unicase/special-casing-table.h
        lib/unicase/special-casing.c
        lib/unicase/special-casing.in.h
        lib/unicase/tolower.c
        lib/unicase/tolower.h
        lib/unicase/u-casemap.h
        lib/unicase/u8-casemap.c
        lib/unicase/u8-tolower.c
        lib/unicase/unicasemap.h
        lib/unictype/bitmap.h
        lib/unictype/combiningclass.c
        lib/unictype/combiningclass.h
        lib/unictype/pr_soft_dotted.c
        lib/unictype/pr_soft_dotted.h
        lib/uninorm/decompose-internal.c
        lib/uninorm/decompose-internal.h
        lib/uninorm/normalize-internal.h
        lib/uninorm/u-normalize-internal.h
        lib/uninorm/u8-normalize.c
        lib/unistr/u-cpy.h
        lib/unistr/u8-cpy.c
        lib/unistr/u8-mbtouc-unsafe-aux.c
        lib/unistr/u8-mbtouc-unsafe.c
        lib/unistr/u8-strlen.c
        lib/unistr/u8-uctomb-aux.c
        lib/unistr/u8-uctomb.c
        lib/uniwidth/cjk.h
        lib/uniwidth/width.c
        lib/_Noreturn.h
        lib/accept.c
        lib/alloca.c
        lib/alloca.in.h
        lib/arg-nonnull.h
        lib/arpa_inet.in.h
        lib/array-mergesort.h
        lib/asnprintf.c
        lib/asprintf.c
        lib/base32.c
        lib/base32.h
        lib/basename-lgpl.c
        lib/basename.c
        lib/binary-io.c
        lib/binary-io.h
        lib/bind.c
        lib/btowc.c
        lib/c++defs.h
        lib/c-ctype.c
        lib/c-ctype.h
        lib/c-strcase.h
        lib/c-strcasecmp.c
        lib/c-strcaseeq.h
        lib/c-strcasestr.c
        lib/c-strcasestr.h
        lib/c-strncasecmp.c
        lib/cloexec.c
        lib/cloexec.h
        lib/close.c
        lib/connect.c
        lib/dirname-lgpl.c
        lib/dirname.c
        lib/dirname.h
        lib/dosname.h
        lib/dup-safer-flag.c
        lib/dup-safer.c
        lib/dup2.c
        lib/errno.in.h
        lib/error.c
        lib/error.h
        lib/exitfail.c
        lib/exitfail.h
        lib/fatal-signal.c
        lib/fatal-signal.h
        lib/fcntl.c
        lib/fcntl.in.h
        lib/fd-hook.c
        lib/fd-hook.h
        lib/fd-safer-flag.c
        lib/fd-safer.c
        lib/filename.h
        lib/flexmember.h
        lib/float+.h
        lib/float.c
        lib/float.in.h
        lib/flock.c
        lib/fnmatch.c
        lib/fnmatch.in.h
        lib/fnmatch_loop.c
        lib/fopen.c
        lib/fseek.c
        lib/fseeko.c
        lib/fstat.c
        lib/ftell.c
        lib/ftello.c
        lib/futimens.c
        lib/gai_strerror.c
        lib/getaddrinfo.c
        lib/getdelim.c
        lib/getdtablesize.c
        lib/getgroups.c
        lib/getline.c
        lib/getopt-cdefs.in.h
        lib/getopt-core.h
        lib/getopt-ext.h
        lib/getopt-pfx-core.h
        lib/getopt-pfx-ext.h
        lib/getopt.c
        lib/getopt.in.h
        lib/getopt1.c
        lib/getopt_int.h
        lib/getpass.c
        lib/getpass.h
        lib/getpeername.c
        lib/getprogname.c
        lib/getprogname.h
        lib/getsockname.c
        lib/gettext.h
        lib/gettime.c
        lib/gettimeofday.c
        lib/gl_openssl.h
        lib/group-member.c
        lib/hard-locale.c
        lib/hard-locale.h
        lib/iconv.in.h
        lib/inet_ntop.c
        lib/intprops.h
        lib/inttypes.in.h
        lib/ioctl.c
        lib/iswblank.c
        lib/itold.c
        lib/langinfo.in.h
        lib/limits.in.h
        lib/link.c
        lib/listen.c
        lib/localcharset.c
        lib/localcharset.h
        lib/locale.in.h
        lib/localeconv.c
        lib/localtime-buffer.c
        lib/localtime-buffer.h
        lib/lseek.c
        lib/lstat.c
        lib/malloc.c
        lib/malloca.c
        lib/malloca.h
        lib/mbchar.c
        lib/mbchar.h
        lib/mbiter.c
        lib/mbiter.h
        lib/mbrtowc.c
        lib/mbsinit.c
        lib/mbsrtowcs-impl.h
        lib/mbsrtowcs-state.c
        lib/mbsrtowcs.c
        lib/mbtowc-impl.h
        lib/mbtowc.c
        lib/md2.c
        lib/md2.h
        lib/md4.c
        lib/md4.h
        lib/md5.c
        lib/md5.h
        lib/memchr.c
        lib/memrchr.c
        lib/minmax.h
        lib/mkdir.c
        lib/mkostemp.c
        lib/mkstemp.c
        lib/mktime-internal.h
        lib/mktime.c
        lib/msvc-inval.c
        lib/msvc-inval.h
        lib/msvc-nothrow.c
        lib/msvc-nothrow.h
        lib/nanosleep.c
        lib/netdb.in.h
        lib/netinet_in.in.h
        lib/nl_langinfo.c
        lib/open.c
        lib/pathmax.h
        lib/pipe-safer.c
        lib/pipe.c
        lib/pipe2-safer.c
        lib/pipe2.c
        lib/printf-args.c
        lib/printf-args.h
        lib/printf-parse.c
        lib/printf-parse.h
        lib/quote.h
        lib/quotearg.c
        lib/quotearg.h
        lib/raise.c
        lib/rawmemchr.c
        lib/recv.c
        lib/regcomp.c
        lib/regex.c
        lib/regex.h
        lib/regex_internal.c
        lib/regex_internal.h
        lib/regexec.c
        lib/sched.in.h
        lib/secure_getenv.c
        lib/select.c
        lib/send.c
        lib/setsockopt.c
        lib/sha1.c
        lib/sha1.h
        lib/sha256.c
        lib/sha256.h
        lib/sha512.c
        lib/sha512.h
        lib/sig-handler.c
        lib/sig-handler.h
        lib/sigaction.c
        lib/signal.in.h
        lib/sigprocmask.c
        lib/size_max.h
        lib/snprintf.c
        lib/socket.c
        lib/sockets.c
        lib/sockets.h
        lib/spawn-pipe.c
        lib/spawn-pipe.h
        lib/spawn.c
        lib/spawn.in.h
        lib/spawn_faction_addclose.c
        lib/spawn_faction_adddup2.c
        lib/spawn_faction_addopen.c
        lib/spawn_faction_destroy.c
        lib/spawn_faction_init.c
        lib/spawn_int.h
        lib/spawnattr_destroy.c
        lib/spawnattr_init.c
        lib/spawnattr_setflags.c
        lib/spawnattr_setsigmask.c
        lib/spawni.c
        lib/spawnp.c
        lib/stat-time.c
        lib/stat-time.h
        lib/stat-w32.c
        lib/stat-w32.h
        lib/stat.c
        lib/stdalign.in.h
        lib/stdbool.in.h
        lib/stddef.in.h
        lib/stdint.in.h
        lib/stdio-impl.h
        lib/stdio-write.c
        lib/stdio.in.h
        lib/stdlib.in.h
        lib/str-two-way.h
        lib/strcasecmp.c
        lib/strchrnul.c
        lib/strdup.c
        lib/streq.h
        lib/strerror-override.c
        lib/strerror-override.h
        lib/strerror.c
        lib/strerror_r.c
        lib/string.in.h
        lib/strings.in.h
        lib/stripslash.c
        lib/strncasecmp.c
        lib/strndup.c
        lib/strnlen.c
        lib/strnlen1.c
        lib/strnlen1.h
        lib/strpbrk.c
        lib/strptime.c
        lib/strtok_r.c
        lib/strtol.c
        lib/strtoll.c
        lib/symlink.c
        lib/sys_file.in.h
        lib/sys_ioctl.in.h
        lib/sys_select.in.h
        lib/sys_socket.c
        lib/sys_socket.in.h
        lib/sys_stat.in.h
        lib/sys_time.in.h
        lib/sys_types.in.h
        lib/sys_uio.in.h
        lib/sys_wait.in.h
        lib/tempname.c
        lib/tempname.h
        lib/time.in.h
        lib/time_r.c
        lib/timegm.c
        lib/timespec.c
        lib/timespec.h
        lib/tmpdir.c
        lib/tmpdir.h
        lib/u64.c
        lib/u64.h
        lib/unicase.in.h
        lib/unictype.in.h
        lib/uninorm.in.h
        lib/unistd--.h
        lib/unistd-safer.h
        lib/unistd.c
        lib/unistd.in.h
        lib/unistr.in.h
        lib/unitypes.in.h
        lib/uniwidth.in.h
        lib/unlink.c
        lib/unlocked-io.h
        lib/unused-parameter.h
        lib/utime.c
        lib/utime.in.h
        lib/utimens.c
        lib/utimens.h
        lib/vasnprintf.c
        lib/vasnprintf.h
        lib/vasprintf.c
        lib/verify.h
        lib/vsnprintf.c
        lib/w32sock.h
        lib/w32spawn.h
        lib/wait-process.c
        lib/wait-process.h
        lib/waitpid.c
        lib/warn-on-use.h
        lib/wchar.in.h
        lib/wcrtomb.c
        lib/wctype-h.c
        lib/wctype.in.h
        lib/wcwidth.c
        lib/write.c
        lib/xalloc-die.c
        lib/xalloc-oversized.h
        lib/xalloc.h
        lib/xmalloc.c
        lib/xmemdup0.c
        lib/xmemdup0.h
        lib/xsize.c
        lib/xsize.h
        lib/xstrndup.c
        lib/xstrndup.h
        msdos/config.h
        src/build_info.c
        src/connect.c
        src/connect.h
        src/convert.c
        src/convert.h
        src/cookies.c
        src/cookies.h
        src/css-tokens.h
        src/css-url.c
        src/css-url.h
        src/css.c
        src/css_.c
        src/exits.c
        src/exits.h
        src/ftp-basic.c
        src/ftp-ls.c
        src/ftp-opie.c
        src/ftp.c
        src/ftp.h
        src/gnutls.c
        src/hash.c
        src/hash.h
        src/host.c
        src/host.h
        src/hsts.c
        src/hsts.h
        src/html-parse.c
        src/html-parse.h
        src/html-url.c
        src/html-url.h
        src/http-ntlm.c
        src/http-ntlm.h
        src/http.c
        src/http.h
        src/init.c
        src/init.h
        src/iri.c
        src/iri.h
        src/log.c
        src/log.h
        src/main.c
        src/metalink.c
        src/metalink.h
        src/mswindows.c
        src/mswindows.h
        src/netrc.c
        src/netrc.h
        src/openssl.c
        src/options.h
        src/progress.c
        src/progress.h
        src/ptimer.c
        src/ptimer.h
        src/recur.c
        src/recur.h
        src/res.c
        src/res.h
        src/retr.c
        src/retr.h
        src/spider.c
        src/spider.h
        src/ssl.h
        src/sysdep.h
        src/url.c
        src/url.h
        src/utils.c
        src/utils.h
        src/version.h
        src/warc.c
        src/warc.h
        src/wget.h
        src/xattr.c
        src/xattr.h
        tests/unit-tests.c
        tests/unit-tests.h
        util/trunc.c)
